ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPy5i01QtSaysVwIROuaWOJX3Fq+kIjgxBEXbLEWMEdV maxinunez2455@gmail.com
@startuml
skinparam classAttributeIconSize 0

class Twitter{
    + agregarUsuario(Usuario usuario): Boolean
    + eliminarUsuario(Usuario usuario)
    - validarScreenName(String screenName): Boolean
}

class Usuario{
    - screenName: String
    + postearTweet(String texto)
    + eliminarTweets()
    + mismoScreenName(String screenName): Boolean
}

abstract class TweetBase {
    # fecha: Date
    + conozcoTweet(Tweet tweet): Boolean
    + leer()
}

class Tweet{
    - texto: String
    + conozcoTweet(Tweet tweet): Boolean
    + leer()
}

class ReTweet {
    + conozcoTweet(Tweet tweet): Boolean
    + leer()
}


Twitter -> "*" Usuario : usuarios
Usuario -> "*" TweetBase : tweets
ReTweet --> TweetBase : tweetOriginal
TweetBase <|-- ReTweet
TweetBase <|-- Tweet


@enduml